syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcHttpService.Grpc.Protos";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
    rpc RestoreUser (RestoreUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
    string name = 1;
    string username = 2;
    string email = 3;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserByIdRequest {
    string id = 1;
}

message GetUserByIdResponse {
    string id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string created_at = 5;
    string updated_at = 6;
}

message DeleteUserRequest {
    string id = 1;
}

message RestoreUserRequest {
    string id = 1;
}
